--- a/Proposal.ipynb
+++ b/Proposal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "91798358-4998-4c69-81fe-2252503f7810",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,13 @@
     "library(tidyverse)\n",
     "library(tidymodels)\n",
     "library(repr)\n",
-    "library(dplyr)"
+    "library(dplyr)\n",
+    "options(repr.matrix.max.rows = 6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "75af5a59-13be-4374-9c02-cc8c7f457463",
    "metadata": {},
    "outputs": [
@@ -33,35 +34,78 @@
      ]
     },
     {
-     "ename": "ERROR",
-     "evalue": "\u001b[1m\u001b[33mError\u001b[39m in `mutate()`:\u001b[22m\n\u001b[1m\u001b[22m\u001b[36mℹ\u001b[39m In argument: `sex = fct_recode(sex, Male = 1, Female = 0)`.\n\u001b[1mCaused by error in `fct_recode()`:\u001b[22m\n\u001b[1m\u001b[22m\u001b[33m!\u001b[39m Each element of `...` must be a named string.\n\u001b[36mℹ\u001b[39m Problems with 2 arguments: Male and Female\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1m\u001b[33mError\u001b[39m in `mutate()`:\u001b[22m\n\u001b[1m\u001b[22m\u001b[36mℹ\u001b[39m In argument: `sex = fct_recode(sex, Male = 1, Female = 0)`.\n\u001b[1mCaused by error in `fct_recode()`:\u001b[22m\n\u001b[1m\u001b[22m\u001b[33m!\u001b[39m Each element of `...` must be a named string.\n\u001b[36mℹ\u001b[39m Problems with 2 arguments: Male and Female\nTraceback:\n",
-      "1. mutate(mutate(select(read_csv(\"heart_data.csv\"), chol, trestbps, \n .     fbs, age, sex), sex = as_factor(sex)), sex = fct_recode(sex, \n .     Male = 1, Female = 0))",
-      "2. mutate.data.frame(mutate(select(read_csv(\"heart_data.csv\"), chol, \n .     trestbps, fbs, age, sex), sex = as_factor(sex)), sex = fct_recode(sex, \n .     Male = 1, Female = 0))",
-      "3. mutate_cols(.data, dplyr_quosures(...), by)",
-      "4. withCallingHandlers(for (i in seq_along(dots)) {\n .     poke_error_context(dots, i, mask = mask)\n .     context_poke(\"column\", old_current_column)\n .     new_columns <- mutate_col(dots[[i]], data, mask, new_columns)\n . }, error = dplyr_error_handler(dots = dots, mask = mask, bullets = mutate_bullets, \n .     error_call = error_call, error_class = \"dplyr:::mutate_error\"), \n .     warning = dplyr_warning_handler(state = warnings_state, mask = mask, \n .         error_call = error_call))",
-      "5. mutate_col(dots[[i]], data, mask, new_columns)",
-      "6. mask$eval_all_mutate(quo)",
-      "7. eval()",
-      "8. fct_recode(sex, Male = 1, Female = 0)",
-      "9. check_recode_levels(...)",
-      "10. cli::cli_abort(c(\"Each element of {.arg ...} must be a named string.\", \n  .     i = \"Problems with {length(problems)} argument{?s}: {problems}\"), \n  .     call = call)",
-      "11. rlang::abort(message, ..., call = call, use_cli_format = TRUE, \n  .     .frame = .frame)",
-      "12. signal_abort(cnd, .file)",
-      "13. signalCondition(cnd)",
-      "14. (function (cnd) \n  . {\n  .     local_error_context(dots, i = frame[[i_sym]], mask = mask)\n  .     if (inherits(cnd, \"dplyr:::internal_error\")) {\n  .         parent <- error_cnd(message = bullets(cnd))\n  .     }\n  .     else {\n  .         parent <- cnd\n  .     }\n  .     message <- c(cnd_bullet_header(action), i = if (has_active_group_context(mask)) cnd_bullet_cur_group_label())\n  .     abort(message, class = error_class, parent = parent, call = error_call)\n  . })(structure(list(message = structure(\"Each element of `...` must be a named string.\", names = \"\"), \n  .     trace = structure(list(call = list(IRkernel::main(), kernel$run(), \n  .         handle_shell(), executor$execute(msg), tryCatch(evaluate(request$content$code, \n  .             envir = .GlobalEnv, output_handler = oh, stop_on_error = 1L), \n  .             interrupt = function(cond) {\n  .                 log_debug(\"Interrupt during execution\")\n  .                 interrupted <<- TRUE\n  .             }, error = .self$handle_error), tryCatchList(expr, \n  .             classes, parentenv, handlers), tryCatchOne(tryCatchList(expr, \n  .             names[-nh], parentenv, handlers[-nh]), names[nh], \n  .             parentenv, handlers[[nh]]), doTryCatch(return(expr), \n  .             name, parentenv, handler), tryCatchList(expr, names[-nh], \n  .             parentenv, handlers[-nh]), tryCatchOne(expr, names, \n  .             parentenv, handlers[[1L]]), doTryCatch(return(expr), \n  .             name, parentenv, handler), evaluate(request$content$code, \n  .             envir = .GlobalEnv, output_handler = oh, stop_on_error = 1L), \n  .         evaluate_call(expr, parsed$src[[i]], envir = envir, enclos = enclos, \n  .             debug = debug, last = i == length(out), use_try = stop_on_error != \n  .                 2L, keep_warning = keep_warning, keep_message = keep_message, \n  .             log_echo = log_echo, log_warning = log_warning, output_handler = output_handler, \n  .             include_timing = include_timing), timing_fn(handle(ev <- withCallingHandlers(withVisible(eval_with_user_handlers(expr, \n  .             envir, enclos, user_handlers)), warning = wHandler, \n  .             error = eHandler, message = mHandler))), handle(ev <- withCallingHandlers(withVisible(eval_with_user_handlers(expr, \n  .             envir, enclos, user_handlers)), warning = wHandler, \n  .             error = eHandler, message = mHandler)), try(f, silent = TRUE), \n  .         tryCatch(expr, error = function(e) {\n  .             call <- conditionCall(e)\n  .             if (!is.null(call)) {\n  .                 if (identical(call[[1L]], quote(doTryCatch))) \n  .                   call <- sys.call(-4L)\n  .                 dcall <- deparse(call, nlines = 1L)\n  .                 prefix <- paste(\"Error in\", dcall, \": \")\n  .                 LONG <- 75L\n  .                 sm <- strsplit(conditionMessage(e), \"\\n\")[[1L]]\n  .                 w <- 14L + nchar(dcall, type = \"w\") + nchar(sm[1L], \n  .                   type = \"w\")\n  .                 if (is.na(w)) \n  .                   w <- 14L + nchar(dcall, type = \"b\") + nchar(sm[1L], \n  .                     type = \"b\")\n  .                 if (w > LONG) \n  .                   prefix <- paste0(prefix, \"\\n  \")\n  .             }\n  .             else prefix <- \"Error : \"\n  .             msg <- paste0(prefix, conditionMessage(e), \"\\n\")\n  .             .Internal(seterrmessage(msg[1L]))\n  .             if (!silent && isTRUE(getOption(\"show.error.messages\"))) {\n  .                 cat(msg, file = outFile)\n  .                 .Internal(printDeferredWarnings())\n  .             }\n  .             invisible(structure(msg, class = \"try-error\", condition = e))\n  .         }), tryCatchList(expr, classes, parentenv, handlers), \n  .         tryCatchOne(expr, names, parentenv, handlers[[1L]]), \n  .         doTryCatch(return(expr), name, parentenv, handler), withCallingHandlers(withVisible(eval_with_user_handlers(expr, \n  .             envir, enclos, user_handlers)), warning = wHandler, \n  .             error = eHandler, message = mHandler), withVisible(eval_with_user_handlers(expr, \n  .             envir, enclos, user_handlers)), eval_with_user_handlers(expr, \n  .             envir, enclos, user_handlers), eval(expr, envir, \n  .             enclos), eval(expr, envir, enclos), mutate(mutate(select(read_csv(\"heart_data.csv\"), \n  .             chol, trestbps, fbs, age, sex), sex = as_factor(sex)), \n  .             sex = fct_recode(sex, Male = 1, Female = 0)), mutate.data.frame(mutate(select(read_csv(\"heart_data.csv\"), \n  .             chol, trestbps, fbs, age, sex), sex = as_factor(sex)), \n  .             sex = fct_recode(sex, Male = 1, Female = 0)), mutate_cols(.data, \n  .             dplyr_quosures(...), by), withCallingHandlers(for (i in seq_along(dots)) {\n  .             poke_error_context(dots, i, mask = mask)\n  .             context_poke(\"column\", old_current_column)\n  .             new_columns <- mutate_col(dots[[i]], data, mask, \n  .                 new_columns)\n  .         }, error = dplyr_error_handler(dots = dots, mask = mask, \n  .             bullets = mutate_bullets, error_call = error_call, \n  .             error_class = \"dplyr:::mutate_error\"), warning = dplyr_warning_handler(state = warnings_state, \n  .             mask = mask, error_call = error_call)), mutate_col(dots[[i]], \n  .             data, mask, new_columns), mask$eval_all_mutate(quo), \n  .         eval(), fct_recode(sex, Male = 1, Female = 0), check_recode_levels(...), \n  .         cli::cli_abort(c(\"Each element of {.arg ...} must be a named string.\", \n  .             i = \"Problems with {length(problems)} argument{?s}: {problems}\"), \n  .             call = call), rlang::abort(message, ..., call = call, \n  .             use_cli_format = TRUE, .frame = .frame)), parent = c(0L, \n  .     1L, 2L, 3L, 4L, 5L, 6L, 7L, 6L, 9L, 10L, 4L, 12L, 13L, 13L, \n  .     15L, 16L, 17L, 18L, 19L, 13L, 13L, 13L, 23L, 24L, 0L, 0L, \n  .     27L, 28L, 28L, 30L, 31L, 0L, 33L, 34L, 35L), visible = c(TRUE, \n  .     TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, \n  .     TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, \n  .     TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, \n  .     TRUE, TRUE, FALSE, FALSE, FALSE), namespace = c(\"IRkernel\", \n  .     NA, \"IRkernel\", NA, \"base\", \"base\", \"base\", \"base\", \"base\", \n  .     \"base\", \"base\", \"evaluate\", \"evaluate\", \"evaluate\", \"evaluate\", \n  .     \"base\", \"base\", \"base\", \"base\", \"base\", \"base\", \"base\", \"evaluate\", \n  .     \"base\", \"base\", \"dplyr\", \"dplyr\", \"dplyr\", \"base\", \"dplyr\", \n  .     NA, \"dplyr\", \"forcats\", \"forcats\", \"cli\", \"rlang\"), scope = c(\"::\", \n  .     NA, \"local\", NA, \"::\", \"local\", \"local\", \"local\", \"local\", \n  .     \"local\", \"local\", \"::\", \":::\", \"local\", \"local\", \"::\", \"::\", \n  .     \"local\", \"local\", \"local\", \"::\", \"::\", \":::\", \"::\", \"::\", \n  .     \"::\", \":::\", \":::\", \"::\", \":::\", NA, \"local\", \"::\", \":::\", \n  .     \"::\", \"::\"), error_frame = c(FALSE, FALSE, FALSE, FALSE, \n  .     FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, \n  .     FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, \n  .     FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, \n  .     FALSE, TRUE, FALSE, FALSE, FALSE)), row.names = c(NA, -36L\n  .     ), version = 2L, class = c(\"rlang_trace\", \"rlib_trace\", \"tbl\", \n  .     \"data.frame\")), parent = NULL, body = c(i = \"Problems with 2 arguments: Male and Female\"), \n  .     rlang = list(inherit = TRUE), call = fct_recode(sex, Male = 1, \n  .         Female = 0), use_cli_format = TRUE), class = c(\"rlang_error\", \n  . \"error\", \"condition\")))",
-      "15. abort(message, class = error_class, parent = parent, call = error_call)",
-      "16. signal_abort(cnd, .file)"
-     ]
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 303 × 6</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>chol</th><th scope=col>trestbps</th><th scope=col>fbs_gt_120</th><th scope=col>age</th><th scope=col>sex</th><th scope=col>num</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>233</td><td>145</td><td>true </td><td>63</td><td>male</td><td>0</td></tr>\n",
+       "\t<tr><td>286</td><td>160</td><td>false</td><td>67</td><td>male</td><td>2</td></tr>\n",
+       "\t<tr><td>229</td><td>120</td><td>false</td><td>67</td><td>male</td><td>1</td></tr>\n",
+       "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
+       "\t<tr><td>131</td><td>130</td><td>false</td><td>57</td><td>male  </td><td>3</td></tr>\n",
+       "\t<tr><td>236</td><td>130</td><td>false</td><td>57</td><td>female</td><td>1</td></tr>\n",
+       "\t<tr><td>175</td><td>138</td><td>false</td><td>38</td><td>male  </td><td>0</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 303 × 6\n",
+       "\\begin{tabular}{llllll}\n",
+       " chol & trestbps & fbs\\_gt\\_120 & age & sex & num\\\\\n",
+       " <dbl> & <dbl> & <fct> & <dbl> & <fct> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t 233 & 145 & true  & 63 & male & 0\\\\\n",
+       "\t 286 & 160 & false & 67 & male & 2\\\\\n",
+       "\t 229 & 120 & false & 67 & male & 1\\\\\n",
+       "\t ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮\\\\\n",
+       "\t 131 & 130 & false & 57 & male   & 3\\\\\n",
+       "\t 236 & 130 & false & 57 & female & 1\\\\\n",
+       "\t 175 & 138 & false & 38 & male   & 0\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 303 × 6\n",
+       "\n",
+       "| chol &lt;dbl&gt; | trestbps &lt;dbl&gt; | fbs_gt_120 &lt;fct&gt; | age &lt;dbl&gt; | sex &lt;fct&gt; | num &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|---|\n",
+       "| 233 | 145 | true  | 63 | male | 0 |\n",
+       "| 286 | 160 | false | 67 | male | 2 |\n",
+       "| 229 | 120 | false | 67 | male | 1 |\n",
+       "| ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ |\n",
+       "| 131 | 130 | false | 57 | male   | 3 |\n",
+       "| 236 | 130 | false | 57 | female | 1 |\n",
+       "| 175 | 138 | false | 38 | male   | 0 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "    chol trestbps fbs_gt_120 age sex    num\n",
+       "1   233  145      true       63  male   0  \n",
+       "2   286  160      false      67  male   2  \n",
+       "3   229  120      false      67  male   1  \n",
+       "⋮   ⋮    ⋮        ⋮          ⋮   ⋮      ⋮  \n",
+       "301 131  130      false      57  male   3  \n",
+       "302 236  130      false      57  female 1  \n",
+       "303 175  138      false      38  male   0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "heart_data <- read_csv(\"heart_data.csv\") |>\n",
-    "select(chol, trestbps, fbs, age, sex) |>\n",
+    "select(chol, trestbps, fbs, age, sex, num) |>\n",
     "mutate(sex = as_factor(sex))|>\n",
-    "mutate(sex = fct_recode(sex, \"Male\" = 1, \"Female\" = 0))\n",
+    "mutate(sex = fct_recode(sex, \"male\" = \"1\", \"female\" = \"0\")) |>\n",
+    "mutate(fbs = as_factor(fbs)) |>\n",
+    "mutate(fbs = fct_recode(fbs, \"true\" = \"1\", \"false\" = \"0\")) |>\n",
+    "rename(\"fbs_gt_120\" = \"fbs\")\n",
     "heart_data"
    ]
   },
