--- a/Proposal.ipynb
+++ b/Proposal.ipynb
@@ -16,9 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "75af5a59-13be-4374-9c02-cc8c7f457463",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -40,13 +42,67 @@
        "<caption>A tibble: 303 × 6</caption>\n",
        "<thead>\n",
        "\t<tr><th scope=col>chol</th><th scope=col>trestbps</th><th scope=col>fbs_gt_120</th><th scope=col>age</th><th scope=col>sex</th><th scope=col>num</th></tr>\n",
-       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;fct&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>233</td><td>145</td><td>true </td><td>63</td><td>male</td><td>0</td></tr>\n",
-       "\t<tr><td>286</td><td>160</td><td>false</td><td>67</td><td>male</td><td>2</td></tr>\n",
-       "\t<tr><td>229</td><td>120</td><td>false</td><td>67</td><td>male</td><td>1</td></tr>\n",
+       "\t<tr><td>233</td><td>145</td><td>true </td><td>63</td><td>male  </td><td>0</td></tr>\n",
+       "\t<tr><td>286</td><td>160</td><td>false</td><td>67</td><td>male  </td><td>2</td></tr>\n",
+       "\t<tr><td>229</td><td>120</td><td>false</td><td>67</td><td>male  </td><td>1</td></tr>\n",
+       "\t<tr><td>250</td><td>130</td><td>false</td><td>37</td><td>male  </td><td>0</td></tr>\n",
+       "\t<tr><td>204</td><td>130</td><td>false</td><td>41</td><td>female</td><td>0</td></tr>\n",
+       "\t<tr><td>236</td><td>120</td><td>false</td><td>56</td><td>male  </td><td>0</td></tr>\n",
+       "\t<tr><td>268</td><td>140</td><td>false</td><td>62</td><td>female</td><td>3</td></tr>\n",
+       "\t<tr><td>354</td><td>120</td><td>false</td><td>57</td><td>female</td><td>0</td></tr>\n",
+       "\t<tr><td>254</td><td>130</td><td>false</td><td>63</td><td>male  </td><td>2</td></tr>\n",
+       "\t<tr><td>203</td><td>140</td><td>true </td><td>53</td><td>male  </td><td>1</td></tr>\n",
+       "\t<tr><td>192</td><td>140</td><td>false</td><td>57</td><td>male  </td><td>0</td></tr>\n",
+       "\t<tr><td>294</td><td>140</td><td>false</td><td>56</td><td>female</td><td>0</td></tr>\n",
+       "\t<tr><td>256</td><td>130</td><td>true </td><td>56</td><td>male  </td><td>2</td></tr>\n",
+       "\t<tr><td>263</td><td>120</td><td>false</td><td>44</td><td>male  </td><td>0</td></tr>\n",
+       "\t<tr><td>199</td><td>172</td><td>true </td><td>52</td><td>male  </td><td>0</td></tr>\n",
+       "\t<tr><td>168</td><td>150</td><td>false</td><td>57</td><td>male  </td><td>0</td></tr>\n",
+       "\t<tr><td>229</td><td>110</td><td>false</td><td>48</td><td>male  </td><td>1</td></tr>\n",
+       "\t<tr><td>239</td><td>140</td><td>false</td><td>54</td><td>male  </td><td>0</td></tr>\n",
+       "\t<tr><td>275</td><td>130</td><td>false</td><td>48</td><td>female</td><td>0</td></tr>\n",
+       "\t<tr><td>266</td><td>130</td><td>false</td><td>49</td><td>male  </td><td>0</td></tr>\n",
+       "\t<tr><td>211</td><td>110</td><td>false</td><td>64</td><td>male  </td><td>0</td></tr>\n",
+       "\t<tr><td>283</td><td>150</td><td>true </td><td>58</td><td>female</td><td>0</td></tr>\n",
+       "\t<tr><td>284</td><td>120</td><td>false</td><td>58</td><td>male  </td><td>1</td></tr>\n",
+       "\t<tr><td>224</td><td>132</td><td>false</td><td>58</td><td>male  </td><td>3</td></tr>\n",
+       "\t<tr><td>206</td><td>130</td><td>false</td><td>60</td><td>male  </td><td>4</td></tr>\n",
+       "\t<tr><td>219</td><td>120</td><td>false</td><td>50</td><td>female</td><td>0</td></tr>\n",
+       "\t<tr><td>340</td><td>120</td><td>false</td><td>58</td><td>female</td><td>0</td></tr>\n",
+       "\t<tr><td>226</td><td>150</td><td>false</td><td>66</td><td>female</td><td>0</td></tr>\n",
+       "\t<tr><td>247</td><td>150</td><td>false</td><td>43</td><td>male  </td><td>0</td></tr>\n",
+       "\t<tr><td>167</td><td>110</td><td>false</td><td>40</td><td>male  </td><td>3</td></tr>\n",
        "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
+       "\t<tr><td>149</td><td>112</td><td>false</td><td>71</td><td>female</td><td>0</td></tr>\n",
+       "\t<tr><td>204</td><td>134</td><td>false</td><td>59</td><td>male  </td><td>1</td></tr>\n",
+       "\t<tr><td>227</td><td>170</td><td>false</td><td>64</td><td>male  </td><td>0</td></tr>\n",
+       "\t<tr><td>278</td><td>146</td><td>false</td><td>66</td><td>female</td><td>0</td></tr>\n",
+       "\t<tr><td>220</td><td>138</td><td>false</td><td>39</td><td>female</td><td>0</td></tr>\n",
+       "\t<tr><td>232</td><td>154</td><td>false</td><td>57</td><td>male  </td><td>1</td></tr>\n",
+       "\t<tr><td>197</td><td>130</td><td>false</td><td>58</td><td>female</td><td>0</td></tr>\n",
+       "\t<tr><td>335</td><td>110</td><td>false</td><td>57</td><td>male  </td><td>2</td></tr>\n",
+       "\t<tr><td>253</td><td>130</td><td>false</td><td>47</td><td>male  </td><td>0</td></tr>\n",
+       "\t<tr><td>205</td><td>128</td><td>false</td><td>55</td><td>female</td><td>3</td></tr>\n",
+       "\t<tr><td>192</td><td>122</td><td>false</td><td>35</td><td>male  </td><td>0</td></tr>\n",
+       "\t<tr><td>203</td><td>148</td><td>false</td><td>61</td><td>male  </td><td>2</td></tr>\n",
+       "\t<tr><td>318</td><td>114</td><td>false</td><td>58</td><td>male  </td><td>4</td></tr>\n",
+       "\t<tr><td>225</td><td>170</td><td>true </td><td>58</td><td>female</td><td>2</td></tr>\n",
+       "\t<tr><td>220</td><td>125</td><td>false</td><td>58</td><td>male  </td><td>0</td></tr>\n",
+       "\t<tr><td>221</td><td>130</td><td>false</td><td>56</td><td>male  </td><td>0</td></tr>\n",
+       "\t<tr><td>240</td><td>120</td><td>false</td><td>56</td><td>male  </td><td>0</td></tr>\n",
+       "\t<tr><td>212</td><td>152</td><td>false</td><td>67</td><td>male  </td><td>1</td></tr>\n",
+       "\t<tr><td>342</td><td>132</td><td>false</td><td>55</td><td>female</td><td>0</td></tr>\n",
+       "\t<tr><td>169</td><td>120</td><td>false</td><td>44</td><td>male  </td><td>2</td></tr>\n",
+       "\t<tr><td>187</td><td>140</td><td>false</td><td>63</td><td>male  </td><td>2</td></tr>\n",
+       "\t<tr><td>197</td><td>124</td><td>false</td><td>63</td><td>female</td><td>1</td></tr>\n",
+       "\t<tr><td>157</td><td>120</td><td>false</td><td>41</td><td>male  </td><td>0</td></tr>\n",
+       "\t<tr><td>176</td><td>164</td><td>true </td><td>59</td><td>male  </td><td>3</td></tr>\n",
+       "\t<tr><td>241</td><td>140</td><td>false</td><td>57</td><td>female</td><td>1</td></tr>\n",
+       "\t<tr><td>264</td><td>110</td><td>false</td><td>45</td><td>male  </td><td>1</td></tr>\n",
+       "\t<tr><td>193</td><td>144</td><td>true </td><td>68</td><td>male  </td><td>2</td></tr>\n",
        "\t<tr><td>131</td><td>130</td><td>false</td><td>57</td><td>male  </td><td>3</td></tr>\n",
        "\t<tr><td>236</td><td>130</td><td>false</td><td>57</td><td>female</td><td>1</td></tr>\n",
        "\t<tr><td>175</td><td>138</td><td>false</td><td>38</td><td>male  </td><td>0</td></tr>\n",
@@ -57,12 +113,66 @@
        "A tibble: 303 × 6\n",
        "\\begin{tabular}{llllll}\n",
        " chol & trestbps & fbs\\_gt\\_120 & age & sex & num\\\\\n",
-       " <dbl> & <dbl> & <fct> & <dbl> & <fct> & <dbl>\\\\\n",
+       " <dbl> & <dbl> & <fct> & <dbl> & <fct> & <fct>\\\\\n",
        "\\hline\n",
-       "\t 233 & 145 & true  & 63 & male & 0\\\\\n",
-       "\t 286 & 160 & false & 67 & male & 2\\\\\n",
-       "\t 229 & 120 & false & 67 & male & 1\\\\\n",
+       "\t 233 & 145 & true  & 63 & male   & 0\\\\\n",
+       "\t 286 & 160 & false & 67 & male   & 2\\\\\n",
+       "\t 229 & 120 & false & 67 & male   & 1\\\\\n",
+       "\t 250 & 130 & false & 37 & male   & 0\\\\\n",
+       "\t 204 & 130 & false & 41 & female & 0\\\\\n",
+       "\t 236 & 120 & false & 56 & male   & 0\\\\\n",
+       "\t 268 & 140 & false & 62 & female & 3\\\\\n",
+       "\t 354 & 120 & false & 57 & female & 0\\\\\n",
+       "\t 254 & 130 & false & 63 & male   & 2\\\\\n",
+       "\t 203 & 140 & true  & 53 & male   & 1\\\\\n",
+       "\t 192 & 140 & false & 57 & male   & 0\\\\\n",
+       "\t 294 & 140 & false & 56 & female & 0\\\\\n",
+       "\t 256 & 130 & true  & 56 & male   & 2\\\\\n",
+       "\t 263 & 120 & false & 44 & male   & 0\\\\\n",
+       "\t 199 & 172 & true  & 52 & male   & 0\\\\\n",
+       "\t 168 & 150 & false & 57 & male   & 0\\\\\n",
+       "\t 229 & 110 & false & 48 & male   & 1\\\\\n",
+       "\t 239 & 140 & false & 54 & male   & 0\\\\\n",
+       "\t 275 & 130 & false & 48 & female & 0\\\\\n",
+       "\t 266 & 130 & false & 49 & male   & 0\\\\\n",
+       "\t 211 & 110 & false & 64 & male   & 0\\\\\n",
+       "\t 283 & 150 & true  & 58 & female & 0\\\\\n",
+       "\t 284 & 120 & false & 58 & male   & 1\\\\\n",
+       "\t 224 & 132 & false & 58 & male   & 3\\\\\n",
+       "\t 206 & 130 & false & 60 & male   & 4\\\\\n",
+       "\t 219 & 120 & false & 50 & female & 0\\\\\n",
+       "\t 340 & 120 & false & 58 & female & 0\\\\\n",
+       "\t 226 & 150 & false & 66 & female & 0\\\\\n",
+       "\t 247 & 150 & false & 43 & male   & 0\\\\\n",
+       "\t 167 & 110 & false & 40 & male   & 3\\\\\n",
        "\t ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮\\\\\n",
+       "\t 149 & 112 & false & 71 & female & 0\\\\\n",
+       "\t 204 & 134 & false & 59 & male   & 1\\\\\n",
+       "\t 227 & 170 & false & 64 & male   & 0\\\\\n",
+       "\t 278 & 146 & false & 66 & female & 0\\\\\n",
+       "\t 220 & 138 & false & 39 & female & 0\\\\\n",
+       "\t 232 & 154 & false & 57 & male   & 1\\\\\n",
+       "\t 197 & 130 & false & 58 & female & 0\\\\\n",
+       "\t 335 & 110 & false & 57 & male   & 2\\\\\n",
+       "\t 253 & 130 & false & 47 & male   & 0\\\\\n",
+       "\t 205 & 128 & false & 55 & female & 3\\\\\n",
+       "\t 192 & 122 & false & 35 & male   & 0\\\\\n",
+       "\t 203 & 148 & false & 61 & male   & 2\\\\\n",
+       "\t 318 & 114 & false & 58 & male   & 4\\\\\n",
+       "\t 225 & 170 & true  & 58 & female & 2\\\\\n",
+       "\t 220 & 125 & false & 58 & male   & 0\\\\\n",
+       "\t 221 & 130 & false & 56 & male   & 0\\\\\n",
+       "\t 240 & 120 & false & 56 & male   & 0\\\\\n",
+       "\t 212 & 152 & false & 67 & male   & 1\\\\\n",
+       "\t 342 & 132 & false & 55 & female & 0\\\\\n",
+       "\t 169 & 120 & false & 44 & male   & 2\\\\\n",
+       "\t 187 & 140 & false & 63 & male   & 2\\\\\n",
+       "\t 197 & 124 & false & 63 & female & 1\\\\\n",
+       "\t 157 & 120 & false & 41 & male   & 0\\\\\n",
+       "\t 176 & 164 & true  & 59 & male   & 3\\\\\n",
+       "\t 241 & 140 & false & 57 & female & 1\\\\\n",
+       "\t 264 & 110 & false & 45 & male   & 1\\\\\n",
+       "\t 193 & 144 & true  & 68 & male   & 2\\\\\n",
        "\t 131 & 130 & false & 57 & male   & 3\\\\\n",
        "\t 236 & 130 & false & 57 & female & 1\\\\\n",
        "\t 175 & 138 & false & 38 & male   & 0\\\\\n",
@@ -72,12 +182,66 @@
        "\n",
        "A tibble: 303 × 6\n",
        "\n",
-       "| chol &lt;dbl&gt; | trestbps &lt;dbl&gt; | fbs_gt_120 &lt;fct&gt; | age &lt;dbl&gt; | sex &lt;fct&gt; | num &lt;dbl&gt; |\n",
+       "| chol &lt;dbl&gt; | trestbps &lt;dbl&gt; | fbs_gt_120 &lt;fct&gt; | age &lt;dbl&gt; | sex &lt;fct&gt; | num &lt;fct&gt; |\n",
        "|---|---|---|---|---|---|\n",
-       "| 233 | 145 | true  | 63 | male | 0 |\n",
-       "| 286 | 160 | false | 67 | male | 2 |\n",
-       "| 229 | 120 | false | 67 | male | 1 |\n",
+       "| 233 | 145 | true  | 63 | male   | 0 |\n",
+       "| 286 | 160 | false | 67 | male   | 2 |\n",
+       "| 229 | 120 | false | 67 | male   | 1 |\n",
+       "| 250 | 130 | false | 37 | male   | 0 |\n",
+       "| 204 | 130 | false | 41 | female | 0 |\n",
+       "| 236 | 120 | false | 56 | male   | 0 |\n",
+       "| 268 | 140 | false | 62 | female | 3 |\n",
+       "| 354 | 120 | false | 57 | female | 0 |\n",
+       "| 254 | 130 | false | 63 | male   | 2 |\n",
+       "| 203 | 140 | true  | 53 | male   | 1 |\n",
+       "| 192 | 140 | false | 57 | male   | 0 |\n",
+       "| 294 | 140 | false | 56 | female | 0 |\n",
+       "| 256 | 130 | true  | 56 | male   | 2 |\n",
+       "| 263 | 120 | false | 44 | male   | 0 |\n",
+       "| 199 | 172 | true  | 52 | male   | 0 |\n",
+       "| 168 | 150 | false | 57 | male   | 0 |\n",
+       "| 229 | 110 | false | 48 | male   | 1 |\n",
+       "| 239 | 140 | false | 54 | male   | 0 |\n",
+       "| 275 | 130 | false | 48 | female | 0 |\n",
+       "| 266 | 130 | false | 49 | male   | 0 |\n",
+       "| 211 | 110 | false | 64 | male   | 0 |\n",
+       "| 283 | 150 | true  | 58 | female | 0 |\n",
+       "| 284 | 120 | false | 58 | male   | 1 |\n",
+       "| 224 | 132 | false | 58 | male   | 3 |\n",
+       "| 206 | 130 | false | 60 | male   | 4 |\n",
+       "| 219 | 120 | false | 50 | female | 0 |\n",
+       "| 340 | 120 | false | 58 | female | 0 |\n",
+       "| 226 | 150 | false | 66 | female | 0 |\n",
+       "| 247 | 150 | false | 43 | male   | 0 |\n",
+       "| 167 | 110 | false | 40 | male   | 3 |\n",
        "| ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ |\n",
+       "| 149 | 112 | false | 71 | female | 0 |\n",
+       "| 204 | 134 | false | 59 | male   | 1 |\n",
+       "| 227 | 170 | false | 64 | male   | 0 |\n",
+       "| 278 | 146 | false | 66 | female | 0 |\n",
+       "| 220 | 138 | false | 39 | female | 0 |\n",
+       "| 232 | 154 | false | 57 | male   | 1 |\n",
+       "| 197 | 130 | false | 58 | female | 0 |\n",
+       "| 335 | 110 | false | 57 | male   | 2 |\n",
+       "| 253 | 130 | false | 47 | male   | 0 |\n",
+       "| 205 | 128 | false | 55 | female | 3 |\n",
+       "| 192 | 122 | false | 35 | male   | 0 |\n",
+       "| 203 | 148 | false | 61 | male   | 2 |\n",
+       "| 318 | 114 | false | 58 | male   | 4 |\n",
+       "| 225 | 170 | true  | 58 | female | 2 |\n",
+       "| 220 | 125 | false | 58 | male   | 0 |\n",
+       "| 221 | 130 | false | 56 | male   | 0 |\n",
+       "| 240 | 120 | false | 56 | male   | 0 |\n",
+       "| 212 | 152 | false | 67 | male   | 1 |\n",
+       "| 342 | 132 | false | 55 | female | 0 |\n",
+       "| 169 | 120 | false | 44 | male   | 2 |\n",
+       "| 187 | 140 | false | 63 | male   | 2 |\n",
+       "| 197 | 124 | false | 63 | female | 1 |\n",
+       "| 157 | 120 | false | 41 | male   | 0 |\n",
+       "| 176 | 164 | true  | 59 | male   | 3 |\n",
+       "| 241 | 140 | false | 57 | female | 1 |\n",
+       "| 264 | 110 | false | 45 | male   | 1 |\n",
+       "| 193 | 144 | true  | 68 | male   | 2 |\n",
        "| 131 | 130 | false | 57 | male   | 3 |\n",
        "| 236 | 130 | false | 57 | female | 1 |\n",
        "| 175 | 138 | false | 38 | male   | 0 |\n",
@@ -88,7 +252,61 @@
        "1   233  145      true       63  male   0  \n",
        "2   286  160      false      67  male   2  \n",
        "3   229  120      false      67  male   1  \n",
+       "4   250  130      false      37  male   0  \n",
+       "5   204  130      false      41  female 0  \n",
+       "6   236  120      false      56  male   0  \n",
+       "7   268  140      false      62  female 3  \n",
+       "8   354  120      false      57  female 0  \n",
+       "9   254  130      false      63  male   2  \n",
+       "10  203  140      true       53  male   1  \n",
+       "11  192  140      false      57  male   0  \n",
+       "12  294  140      false      56  female 0  \n",
+       "13  256  130      true       56  male   2  \n",
+       "14  263  120      false      44  male   0  \n",
+       "15  199  172      true       52  male   0  \n",
+       "16  168  150      false      57  male   0  \n",
+       "17  229  110      false      48  male   1  \n",
+       "18  239  140      false      54  male   0  \n",
+       "19  275  130      false      48  female 0  \n",
+       "20  266  130      false      49  male   0  \n",
+       "21  211  110      false      64  male   0  \n",
+       "22  283  150      true       58  female 0  \n",
+       "23  284  120      false      58  male   1  \n",
+       "24  224  132      false      58  male   3  \n",
+       "25  206  130      false      60  male   4  \n",
+       "26  219  120      false      50  female 0  \n",
+       "27  340  120      false      58  female 0  \n",
+       "28  226  150      false      66  female 0  \n",
+       "29  247  150      false      43  male   0  \n",
+       "30  167  110      false      40  male   3  \n",
        "⋮   ⋮    ⋮        ⋮          ⋮   ⋮      ⋮  \n",
+       "274 149  112      false      71  female 0  \n",
+       "275 204  134      false      59  male   1  \n",
+       "276 227  170      false      64  male   0  \n",
+       "277 278  146      false      66  female 0  \n",
+       "278 220  138      false      39  female 0  \n",
+       "279 232  154      false      57  male   1  \n",
+       "280 197  130      false      58  female 0  \n",
+       "281 335  110      false      57  male   2  \n",
+       "282 253  130      false      47  male   0  \n",
+       "283 205  128      false      55  female 3  \n",
+       "284 192  122      false      35  male   0  \n",
+       "285 203  148      false      61  male   2  \n",
+       "286 318  114      false      58  male   4  \n",
+       "287 225  170      true       58  female 2  \n",
+       "288 220  125      false      58  male   0  \n",
+       "289 221  130      false      56  male   0  \n",
+       "290 240  120      false      56  male   0  \n",
+       "291 212  152      false      67  male   1  \n",
+       "292 342  132      false      55  female 0  \n",
+       "293 169  120      false      44  male   2  \n",
+       "294 187  140      false      63  male   2  \n",
+       "295 197  124      false      63  female 1  \n",
+       "296 157  120      false      41  male   0  \n",
+       "297 176  164      true       59  male   3  \n",
+       "298 241  140      false      57  female 1  \n",
+       "299 264  110      false      45  male   1  \n",
+       "300 193  144      true       68  male   2  \n",
        "301 131  130      false      57  male   3  \n",
        "302 236  130      false      57  female 1  \n",
        "303 175  138      false      38  male   0  "
@@ -105,17 +323,32 @@
     "mutate(sex = fct_recode(sex, \"male\" = \"1\", \"female\" = \"0\")) |>\n",
     "mutate(fbs = as_factor(fbs)) |>\n",
     "mutate(fbs = fct_recode(fbs, \"true\" = \"1\", \"false\" = \"0\")) |>\n",
-    "rename(\"fbs_gt_120\" = \"fbs\")\n",
+    "rename(\"fbs_gt_120\" = \"fbs\") |>\n",
+    "mutate(num = as_factor(num)) \n",
     "heart_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "db6ce9e7-e538-43cd-8bee-926084e5df89",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in parse(text = x, srcfile = src): <text>:5:0: unexpected end of input\n3:             labs(x= \"Fasting Blood Sugar\", y = \"Resting Blood Pressure\", title = \"xxx\")+\n4:             \n  ^\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in parse(text = x, srcfile = src): <text>:5:0: unexpected end of input\n3:             labs(x= \"Fasting Blood Sugar\", y = \"Resting Blood Pressure\", title = \"xxx\")+\n4:             \n  ^\nTraceback:\n"
+     ]
+    }
+   ],
+   "source": [
+    "heart_data <- ggplot(aes(x= fbs_gt_120, y= trestbps, shape = num)) +\n",
+    "            geom_point(alpha = 0.5)+ \n",
+    "            labs(x= \"Fasting Blood Sugar\", y = \"Resting Blood Pressure\", title = \"xxx\")+\n",
+    "            "
+   ]
   },
   {
    "cell_type": "code",
