Did the plot analysis
Hey all, did the plot_analysis for all the plots and also added my name, feel free to change anything.

--- a/Proposal.ipynb
+++ b/Proposal.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Using age, cholestrol, and resting blood pressure to classify heart disease patients from Cleveland #\n",
     "\n",
-    "**John Mao and Caitlyn Chan**\n",
+    "**John Mao, Caitlyn Chan and Ritaksha Roy Burman**\n",
     "\n",
     "\n",
     "### Introduction ###\n",
@@ -2714,9 +2714,19 @@
     "The dataframe has been split into two: a training set and a testing set. The data is stratified by the categorical label variable, **diagnosis**. The split is reproducible as we set the seed. \n",
     "\n",
     "To visualize the results of our data analysis, two scatterplots of different numerical variables were plotted against eachother. The visualizations helped us to choose and identify the useful variables for our prediction. \n",
-    "* In the plot of **trestbp vs age** ANALYZE RELATIONSHIP, explain\n",
-    "* In the plot of **chol vs age** \"\"\n",
-    "* In the plot of **thalach vs chol** \"\"\n",
+    "\n",
+    "* In the plot of **trestbp vs age**\n",
+    "\n",
+    "In this plot we notice a pattern that between the ages of 50 to 70, the resting bood pressure is high. Hereby we understand that in the older ages Hypertension can occur and we can get coronary heart disease. In terms of just the relationship of trestbp with age, without considering diagnosis, it shows a moderate positive correlation.\n",
+    "\n",
+    "* In the plot of **chol vs age**\n",
+    "\n",
+    "In this particular plot we notice a pattern that between the genders, females are showing less sign of disease than the males. It is observed that females are showing more signs of heart disease during older ages, whereas males are showing more signs of diseases overall. In both the graphs there is no correlation at all.\n",
+    "\n",
+    "* In the plot of **thalach vs chol**\n",
+    "\n",
+    "In this plot we notice the pattern that when maximum heart rate (bpm) is high and cholestrol is less, the patients show less sign of heart disease and when the maximum heart rate (bpm) is less and cholestrol is less they, show more signs of heart disease. It can be predicted that in both the cases, the cholestrol on most of the patients is 200 to 300, showing that in this comparison what the maximum heart rate (bpm) is matters more. No overall correlation shown.\n",
+    "\n",
     "\n",
     "These relationships and distribution encouraged selection of **trestbp, age, thalach and chol** to be our predictors. \n",
     "\n",
