reduced intro and preliminary measures

--- a/Proposal.ipynb
+++ b/Proposal.ipynb
@@ -13,9 +13,9 @@
     "### Introduction ###\n",
     "Cardiovascular heart diseases are the leading cause of death worldwide, accounting for an estimated 17.9 million casualties each year according to the [WHO.](https://www.who.int/health-topics/cardiovascular-diseases#tab=tab_1)\n",
     "\n",
-    "Our project seeks to use age, cholesterol, and resting blood pressure of at-risk individuals to aid in the early identification and diagnosis of coronary artery disease, (CAD), a type of heart disease in which one's arteries that deliver blood to the heart is reduced in diameter due to plaque buildup. As a result, patients with CAD are at a higher risk for a heart attack (CDC, 2021).\n",
+    "Our project seeks to use age, cholesterol, maximum heart rate and resting blood pressure of at-risk individuals to aid in the early diagnosis of coronary artery disease, (CAD), a type of heart disease in which one's arteries that deliver blood to the heart is reduced in diameter due to plaque buildup (CDC, 2021).\n",
     "\n",
-    "There are a number of risk factors that can influence one's likelihood of having CAD. We wish to know if an individual's cholesterol, age, resting blood pressure, and sex can be used to accurately predict their likelihood of being afflicted by heart disease. Furthermore, we wish to identify which of the factors has the greatest influence on an individual's diagnosis. The goal of this project is to classify paitents whether or not they have (CAD) for effective preventatitive interventions.\n",
+    "The goal of this project is to classify paitents whether or not they have (CAD) for effective preventatitive interventions.\n",
     "\n",
     "The question we wish to answer is: \n",
     "**What is the likelihood a patient will have coronary artery disease based on age, cholestrol levels, resting blood pressure and sex?**\n",
@@ -31,13 +31,7 @@
     "### Preliminary exploratory data analysis ###\n",
     "We have 303 total rows of data amongst our 5 variables with no observations that contain missing data.\n",
     "\n",
-    "To investigate potential trends, we created the following visualizations:\n",
-    "\n",
-    "* Resting blood pressure versus age, examining associations with heart disease diagnosis.\n",
-    "\n",
-    "* Cholesterol versus age, separated by sex to explore potential differences between male and female patients.\n",
-    "\n",
-    "* In the following code cells, training data is summarized and visualized using plots. This exploratory data analysis will aid our investigation of diagnosising a new patient with CAD. "
+    "* In the following code cells, training data is summarized and visualized using plots. "
    ]
   },
   {
