newest modifications to markdown cells

--- a/Proposal.ipynb
+++ b/Proposal.ipynb
@@ -2730,7 +2730,7 @@
     "We expect to see a positive trend with resting blood pressure and age. We also expect to see that on average, those afflicted with heart diseases will have higher blood pressures.\n",
     "We wish to explore how sex also impacts an individual's potential risk.\n",
     "\n",
-    "This data anaylsis could be advantageous to enhance the timely and accurate diagnosis of cardiovascular disease to help implement appropriate and preventative interventions and recogniing risk factors. \n",
+    "This data anaylsis could be advantageous to enhance the timely and accurate diagnosis of cardiovascular disease to help implement appropriate and preventative interventions and recognizing risk factors. \n",
     "\n",
     "Future questions this data analysis could lead to: \n",
     "1. Which of the factors have the greatest influence on diagnosis of CAD?\n",
