--- a/Proposal.ipynb
+++ b/Proposal.ipynb
@@ -5,7 +5,7 @@
    "id": "5defb0c3-9458-4314-8250-2538b960dcb7",
    "metadata": {},
    "source": [
-    "# Using age, cholestrol, and resting blood pressure to classify heart disease patients from Cleveland #\n",
+    "# Using age, cholestrol, maximum heart rate and resting blood pressure to classify heart disease patients from Cleveland #\n",
     "\n",
     "**John Mao, Caitlyn Chan and Ritaksha Roy Burman**\n",
     "\n",
@@ -2711,15 +2711,15 @@
     "\n",
     "* In the plot of **trestbp vs age**\n",
     "\n",
-    "In this plot we notice a pattern that between the ages of 50 to 70, the resting bood pressure is high. Hereby we understand that in the older ages Hypertension can occur and we can get coronary heart disease. In terms of just the relationship of trestbp with age, without considering diagnosis, it shows a moderate positive correlation.\n",
+    "In this plot we notice a pattern that between the ages of 50 to 70, the resting bood pressure is high. Hereby we understand that in the older ages Hypertension can occur and we can get coronary heart disease. \n",
     "\n",
     "* In the plot of **chol vs age**\n",
     "\n",
-    "In this particular plot we notice a pattern that between the genders, females are showing less sign of disease than the males. It is observed that females are showing more signs of heart disease during older ages, whereas males are showing more signs of diseases overall. In both the graphs there is no correlation at all.\n",
+    "In this particular plot we notice a pattern that between the genders, females are showing less sign of disease than the males. It is observed that females are showing more signs of heart disease during older ages, whereas males are showing more signs of diseases overall. \n",
     "\n",
     "* In the plot of **thalach vs chol**\n",
     "\n",
-    "In this plot we notice the pattern that when maximum heart rate (bpm) is high and cholestrol is less, the patients show less sign of heart disease and when the maximum heart rate (bpm) is less and cholestrol is less they, show more signs of heart disease. It can be predicted that in both the cases, the cholestrol on most of the patients is 200 to 300, showing that in this comparison what the maximum heart rate (bpm) is matters more. No overall correlation shown.\n",
+    "In this plot we notice the pattern that when maximum heart rate (bpm) is high and cholestrol is less, the patients show less sign of heart disease and when the maximum heart rate (bpm) is less and cholestrol is less, they show more signs of heart disease.\n",
     "\n",
     "\n",
     "These relationships and distribution encouraged selection of **trestbp, age, thalach and chol** to be our predictors. \n",
