--- a/Proposal.ipynb
+++ b/Proposal.ipynb
@@ -13,14 +13,14 @@
     "### Introduction ###\n",
     "Cardiovascular heart diseases are the leading cause of death worldwide, accounting for an estimated 17.9 million casualties each year according to the [WHO.](https://www.who.int/health-topics/cardiovascular-diseases#tab=tab_1)\n",
     "\n",
-    "Our project seeks to use age, cholesterol, maximum heart rate and resting blood pressure of at-risk individuals to aid in the early diagnosis of coronary artery disease, (CAD), a type of heart disease in which one's arteries that deliver blood to the heart is reduced in diameter due to plaque buildup (CDC, 2021).\n",
+    "Our project seeks to use age, cholesterol, maximum heart rate and resting blood pressure to diagnosis individuals with coronary artery disease, (CAD). CAD occurs when the arteries that deliver blood to the heart is reduced in diameter due to plaque buildup (CDC, 2021).\n",
     "\n",
-    "The goal of this project is to classify paitents whether or not they have (CAD) for effective preventatitive interventions.\n",
+    "The goal of this project is to classify patients of whether they have CAD for preventatitive interventions.\n",
     "\n",
     "The question we wish to answer is: \n",
-    "**What is the likelihood a patient will have coronary artery disease based on age, cholestrol levels, resting blood pressure and sex?**\n",
+    "**What is the likelihood a patient will have coronary artery disease based on age, cholestrol levels, resting blood pressure and maximum heart rate achieved?**\n",
     "\n",
-    "To answer our questions, we are using the [heart disease](https://archive.ics.uci.edu/dataset/45/heart+disease) database."
+    "To answer this, we are using the [heart disease](https://archive.ics.uci.edu/dataset/45/heart+disease) database."
    ]
   },
   {
@@ -30,8 +30,7 @@
    "source": [
     "### Preliminary exploratory data analysis ###\n",
     "We have 303 total rows of data amongst our 5 variables with no observations that contain missing data.\n",
-    "\n",
-    "* In the following code cells, training data is summarized and visualized using plots. "
+    "\n"
    ]
   },
   {
@@ -2695,7 +2694,7 @@
    "source": [
     "\n",
     "### Methods ###\n",
-    "We will be using the variables as follows from the Heart Disease Database, in particular the Cleaveland database:\n",
+    "We will be using variables from the Heart Disease Database, in particular the Cleaveland database:\n",
     "- chol : serium cholestoral in mg/dl\n",
     "- age : age in years\n",
     "- trestbps : resting blood pressure (in mm Hg on admission to hospital)\n",
@@ -2703,36 +2702,35 @@
     "- num : 0 = unafflicted by disease, (1,2,3,4) showing presense of heart disease.\n",
     "- thalach: maximum heart rate achieved (bpm) \n",
     "\n",
-    "To tidy the data, we have changed the sex and num (presense of heart disease) to factors due to them being discrete variables as opposed to continous. Because the variable, **num** uses integers 1 to 4 to determine diagnosis of CAD (angiographic disease status), we have created a new column in the training data table, with a logical statement which sets presene of heart disease (**num** > 0) to TRUE and absence of heart disease (**num** = 0) to FALSE. \n",
+    "To tidy the data, we have changed the sex and num (presense of heart disease) to factors. **num** uses integers 1 to 4 to determine diagnosis of CAD, thus we have created a new column which sets presence of heart disease (**num** > 0) to TRUE and absence (**num** = 0) to FALSE. \n",
     "\n",
-    "The dataframe has been split into two: a training set and a testing set. The data is stratified by the categorical label variable, **diagnosis**. The split is reproducible as we set the seed. \n",
+    "The dataframe has been split into a training and testing set. The data is stratified by the categorical variable, **diagnosis**. \n",
     "\n",
-    "To visualize the results of our data analysis, two scatterplots of different numerical variables were plotted against eachother. The visualizations helped us to choose and identify the useful variables for our prediction. \n",
+    "To visualize the results of our data analysis, scatterplots of different numerical variables were plotted against eachother. \n",
     "\n",
     "* In the plot of **trestbp vs age**\n",
     "\n",
-    "In this plot we notice a pattern that between the ages of 50 to 70, the resting bood pressure is high. Hereby we understand that in the older ages Hypertension can occur and we can get coronary heart disease. \n",
+    "A distinct region of resting blood pressure is high in the ages of 50 to 70. \n",
     "\n",
     "* In the plot of **chol vs age**\n",
     "\n",
-    "In this particular plot we notice a pattern that between the genders, females are showing less sign of disease than the males. It is observed that females are showing more signs of heart disease during older ages, whereas males are showing more signs of diseases overall. \n",
+    "john add here \n",
     "\n",
     "* In the plot of **thalach vs chol**\n",
     "\n",
-    "In this plot we notice the pattern that when maximum heart rate (bpm) is high and cholestrol is less, the patients show less sign of heart disease and when the maximum heart rate (bpm) is less and cholestrol is less, they show more signs of heart disease.\n",
+    "There are distinct regions of TRUE and FALSE, and a mix of both. \n",
     "\n",
+    "These relationships and distribution determined selection of **trestbp, age, thalach and chol** as predictors. \n",
     "\n",
-    "These relationships and distribution encouraged selection of **trestbp, age, thalach and chol** to be our predictors. \n",
-    "\n",
-    "We are going to train and classify using K-nearest neighbours to attempt to determine if a new patient is likely to be afflicted by heart disease.\n",
+    "We are going to train and classify using K-nearest neighbours to determine if a new patient is likely to be afflicted by heart disease.\n",
     "\n",
     "### Expected Outcomes and Significance ##\n",
-    "We expect to see a positive trend with resting blood pressure and age. We also expect to see that on average, those afflicted with heart diseases will have higher blood pressures.\n",
-    "We wish to explore how sex also impacts an individual's potential risk.\n",
+    "We expect to see a positive trend with resting blood pressure and age. We also expect to see that on average, those  with heart diseases will have higher blood pressures.\n",
+    "We wish to explore how sex impacts an individual's potential risk.\n",
     "\n",
-    "This data anaylsis could be advantageous to enhance the timely and accurate diagnosis of cardiovascular disease to help implement appropriate and preventative interventions and recognizing risk factors. \n",
+    "This data anaylsis could be advantageous to enhance timely diagnosis of cardiovascular disease to help implement interventions and recognize risk factors. \n",
     "\n",
-    "Future questions this data analysis could lead to: \n",
+    "Future questions this could lead to: \n",
     "1. Which of the factors have the greatest influence on diagnosis of CAD?\n",
     "2. What are some preventative measures one can take to minimize risk of heart disease?\n",
     "\n",
