--- a/Proposal.ipynb
+++ b/Proposal.ipynb
@@ -20,7 +20,9 @@
     "The question we wish to answer is: \n",
     "**What is the likelihood a patient will have coronary artery disease based on age, sex, cholestrol levels, resting blood pressure and maximum heart rate achieved?**\n",
     "\n",
-    "To answer this, we are using the [heart disease](https://archive.ics.uci.edu/dataset/45/heart+disease) database."
+    "To answer this, we are using the [heart disease](https://archive.ics.uci.edu/dataset/45/heart+disease) database.\n",
+    "\n",
+    "We are then comparing this to the Switzerland database [swi]"
    ]
   },
   {
@@ -216,6 +218,14 @@
     "\n",
     "Before we visualize and begin our prediction analysis, we need to check that the two predictor classes are balanced so that one class prediction is not favored over the other."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abcb4729-b3a2-4c46-9f39-a9bbd8a21190",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
