--- a/Proposal.ipynb
+++ b/Proposal.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "To answer this, we are using the [heart disease](https://archive.ics.uci.edu/dataset/45/heart+disease) database.\n",
     "\n",
-    "We are then comparing this to the Switzerland database [swi]"
+    "We are then comparing this to the Switzerland [switzerland_heart_disease](https://archive.ics.uci.edu/ml/machine-learning-databases/heart-disease/processed.switzerland.data) database."
    ]
   },
   {
