--- a/Proposal.ipynb
+++ b/Proposal.ipynb
@@ -3547,15 +3547,13 @@
     "                add_recipe(heart_recipe) |>\n",
     "                add_model(spec) |>\n",
     "                tune_grid(resamples = heart_vfold, grid = gridvals) |>\n",
-    "                collect_metrics()   \n",
+    "                collect_metrics()  \n",
     "\n",
     "# filter metrics for accuracy \n",
     "accuracies_lots <- knn_results |>\n",
     "                filter(.metric == \"accuracy\") |>\n",
-    "                select(neighbors, mean) |>       \n",
-    "                mutate(mean = 100*mean)|>\n",
-    "                arrange(-mean) |>\n",
-    "                head()\n",
+    "                select(neighbors, mean) |>\n",
+    "                arrange(-mean)\n",
     "\n",
     "# Visualize k accuracy \n",
     "cross_val_plot <- accuracies_lots |> # accuracies\n",
@@ -3823,7 +3821,19 @@
     "heart_conf_mat\n",
     "heart_predictions\n",
     "# MAKE SURE TO CALCULATE THE ACCURACY, RECALL, PRECISION\n",
-    "best_k\n"
+    "best_k\n",
+    "\n",
+    "heart_best_k <- workflow() |>\n",
+    "        add_recipe(heart_recipe) |>\n",
+    "        add_model(spec) |>\n",
+    "        tune_grid(resamples = heart_vfold, grid = gridvals) |>\n",
+    "        collect_metrics() |>\n",
+    "        filter(.metric == \"accuracy\") |>\n",
+    "        select(neighbors, mean) |>\n",
+    "        mutate(mean = 100*mean)|>\n",
+    "        arrange(desc(mean))\n",
+    "\n",
+    "head(heart_best_k)"
    ]
   },
   {
